<?xml version="1.0"?>
<package format="3">
  <name>dtc_test</name>
  <version>0.1.0</version>
  <description>Test project containing a lite version of Dynamic Task Planner, for debugging purposes</description>
  <maintainer email="leandro.ruiz@mtorres.com">Leandro Ruiz</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <build_depend>eigen</build_depend>

  <depend>action_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>rclcpp</depend>
  <depend>rosparam_shortcuts</depend>
  <depend>std_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>yaml_cpp_vendor</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ros_testing</test_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>